--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Compiled class file
+# Compiled class files
 *.class
 
 # Log file
@@ -20,3 +20,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Notes
+_RecentChanges.txt
