--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # Log file
 *.log
 
+# OpenOffice temp files
+*.~*
+
 # BlueJ files
 *.ctxt
 
@@ -23,3 +26,4 @@ hs_err_pid*
 
 # Notes
 _RecentChanges.txt
+*.rtf#
